--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,29 @@ label{
     height: auto;
     border-radius: 0.2rem;
 }
+
+@keyframes delete {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
+}
+
+.contenedorEliminado{
+    animation: delete 1s ease 1 forwards;
+}
+
+@keyframes add {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.contenedoragregado{
+    animation: add 1s ease 1 forwards;
+}
