feat: :sparkles: Actualizacion

--- a/styles.css
+++ b/styles.css
@@ -106,12 +106,17 @@ label{
 
 .desplegarDetalles{
     display: flex;
+    z-index: 2;
+    gap: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: fixed;
     width: 100vw;
     height: 100vh;
+    padding: 15rem;
+    top: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.607);
     color: var(--colorTexto);
 }
